hw03 prepare properties